<resources>
    <string name="app_name">LinearLayout</string>
    <string name="button1_name">constraint_layout</string>
    <string name="button2_name">Login</string>
    <string name="button3_name">Activity Practice</string>
    <string name="button4_name">button 4</string>
    <string name="button5_name">button 5</string>
    <string name="button6_name">button 6</string>
    <string name="button7_name">button 7</string>
    <string name="button8_name">button 8</string>
    <string name="button9_name">button 9</string>
    <string name="button10_name">button 10</string>
    <string name="title">Android Practice</string>
    <string name="hello">Hello!</string>
    <string name="center_img">center img</string>
    <string name="singup">Singup</string>
    <string name="login">Login</string>
    <string name="aware">aware</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_connect_with">or connect with</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="sign_up_with_e_mail">Sign Up with E-mail</string>
    <string name="select_contact">Select Contact</string>
    <string name="life_cycle">Life Cycle</string>
</resources>