<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="32dp"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1_name"
        android:layout_marginBottom="12dp"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/button2_name"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textAllCaps="false" />


    <Button
        android:layout_width="match_parent"
        android:text="@string/button3_name"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textAllCaps="false" />

</LinearLayout>